--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,8 @@ h1{
     font-weight: 500;
     line-height: 1.2;
     color: #fff;
-    font-size: 2.5rem;
+    font-size: 500px;
+    font-family: 'Joan', serif;
 }
 
 .container {
@@ -88,7 +89,8 @@ h1{
 .table th {
     padding: .75rem;
     vertical-align: top;
-    border-top: 1px solid #dee2e6
+    border-top: 1px solid #dee2e6;
+    font-family: 'Noto Sans Adlam Unjoined', sans-serif;
 }
 
 
@@ -98,7 +100,7 @@ section.todo-outer {
     padding: 30px 0;
 }
 section.todo-outer h1 {
-    font-size: 40px;
+    font-size: 45px;
     margin-bottom: 20px;
     margin-left: 25%;
 }
@@ -125,8 +127,13 @@ table tr td button {
 td{
     border: none;
 }
+tr{
+    font-size: 1.2rem;
+
+}
 .completed{
     text-decoration: line-through;
+    font-size: 1.3rem;
 }
 
 #savetaskbtn{
@@ -142,8 +149,9 @@ td{
     background-color: #82a6e963;
     padding: 10px;
     color: #012e50;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 500;
+    font-family: sans-serif;
 }
 
 .form-control:focus{
@@ -168,6 +176,7 @@ td{
     border: none;
     outline: none;
     cursor: pointer;
+    font-family: 'Noto Sans Adlam Unjoined', sans-serif;
 }
 
 .btnSave{
@@ -183,6 +192,7 @@ td{
     border: none;
     outline: none;
     cursor: pointer;
+    font-family: 'Noto Sans Adlam Unjoined', sans-serif;
 }
 
 .btnDel{
@@ -199,4 +209,5 @@ td{
     outline: none;
     cursor: pointer;
     margin-left: 10px;
+    font-family: 'Noto Sans Adlam Unjoined', sans-serif;
 }
